syntax = "proto3";
package chat;

option go_package = "github.com/lokiloko/refactored-chainsaw/microservice-to-search-movies/gen;gen";

message GetByIMDBIDRequest {
  string id = 1;
}

message GetByIMDBIDResponse {
  Movie data = 1;
}

message GetMoviesPaginatedRequest {
  uint64 page = 1;
  string keyword = 2;
}

message GetMoviesPaginatedResponse {
  repeated Movie data = 1;
}

message Movie {
  string title = 1;
  string year = 2;
  string rated = 3;
  string released = 4;
  string runtime = 5;
  string genre = 6;
  string director = 7;
  string writer = 8;
  string actors = 9;
  string plot = 10;
  string language = 11;
  string country = 12;
  string awards = 13;
  string poster = 14;
  string metascore = 15;
  string imdbID = 16;
  string imdbVotes = 17;
  string imdbRating = 18;
  string type = 19;
  string dvd = 20;
  string production = 21;
  string website = 22;
  string boxOffice = 23;
}

service MovieService {
  rpc GetByID(GetByIMDBIDRequest) returns (GetByIMDBIDResponse) {}
  rpc GetPaginated(GetMoviesPaginatedRequest) returns (GetMoviesPaginatedResponse) {}
}